@@ -1,3 +1,9 @@
+== master
+
+* enhancements
+  * Support Rails 4.
+  * Drop support to Rails < 3.2 and Ruby 1.8.
+
 == 0.2.6
 
 * enhancements
